--- a/app/views/static/index_home.html.erb
+++ b/app/views/static/index_home.html.erb
@@ -333,48 +333,38 @@
 <!-- References -->
 
 <section class="section">
-  <div class="container">
+<div class="container">
     <div class="row row-grid justify-content-center">
-      <div class="col-lg-8 text-center">
-        <div class="text-center">
-          <h4 class="display-4 mb-5 mt-5">These companies use our solution</h4>
-          <div class="row justify-content-center">
-            <div class="col-lg-2 col-4">
-              <a href="https://www.creative-tim.com/product/argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Bootstrap 4 - Most popular front-end component library">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/bootstrap.jpg" class="img-fluid">
-              </a>
+        <div class="col-lg-8 text-center">
+            <div class="text-center">
+                <h4 class="display-4 mb-5 mt-5">These companies use our solution</h4>
+                <div class="row justify-content-center">
+                    
+                    <div class="col-lg-2 col-4">
+                        <%= image_tag "ref/theOz.jpg", class: "img-fluid-companie", style: "width: 200px;" %>
+                    </div>
+                    
+                    <div class="col-lg-2 col-4">
+                        <%= image_tag "ref/inceco.png", class: "img-fluid-companie", style: "width: 200px;" %>
+                    </div>
+                    
+                    <div class="col-lg-2 col-4">
+                        <%= image_tag "ref/CSR.png", class: "img-fluid-companie", style: "width: 200px;" %>
+                    </div>
+                    
+                    <div class="col-lg-2 col-4">
+                        <%= image_tag "ref/agatheconseil.jpeg", class: "img-fluid-companie", style: "width: 200px;" %>
+                    </div>
+                    
+                    <div class="col-lg-2 col-4">
+                        <%= image_tag "ref/auditacces.png", class: "img-fluid-companie", style: "width: 200px;" %>
+                    </div>
+                    <div class="col-lg-2 col-4">
+                        <%= image_tag "ref/digital&you.jpeg", class: "img-fluid-companie", style: "width: 200px;" %>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-2 col-4">
-              <a href=" https://www.creative-tim.com/product/vue-argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Vue.js - The progressive javascript framework">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/vue.jpg" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-lg-2 col-4">
-              <a href=" https://www.creative-tim.com/product/argon-design-system-angular" target="_blank" data-toggle="tooltip" data-original-title="Angular - One framework. Mobile &amp; desktop">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/angular.jpg" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-lg-2 col-4">
-              <a href=" https://www.creative-tim.com/product/argon-design-system-react" target="_blank" data-toggle="tooltip" data-original-title="React - A JavaScript library for building user interfaces">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/react.jpg" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-lg-2 col-4">
-              <a href=" https://www.creative-tim.com/product/argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Sketch - Digital design toolkit">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/sketch.jpg" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-lg-2 col-4">
-              <a href=" https://www.creative-tim.com/product/argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Adobe Photoshop - Software for digital images manipulation">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/ps.jpg" class="img-fluid">
-              </a>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
+</div>
 </section>
-
-
- 
