--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	<head>
 		<!-- Favicon -->
 		<link href="assets/images/brand/favicon.png" rel="icon" type="image/png">
 		<!-- Icons -->
