--- a/app/views/landings/show.html.erb
+++ b/app/views/landings/show.html.erb
@@ -10,9 +10,11 @@
       <%= f.hidden_field :question_id, :value => q.id %>
       <%= f.hidden_field :survey_id, :value => q.survey_id %>
       <%= f.button :submit, 'Rate', class: "btn btn-info btn-sm" %><br>
-      - Answers :<% q.answers.each do |qa| %>
-                  <%= qa.value%> / 
-                <% end %><br><br>
+      <% sel = [] %>
+    - Answers :<% q.answers.each do |qa| %>
+                <% sel << qa.value%>
+              <% end %>
+              <%= sel.last %><br><br>
   <% end %>
   <% i += 1 %>
 <% end %>
