AddRefToLists & Sending survey view

--- a/app/views/list_mailer/sending_survey.html.erb
+++ b/app/views/list_mailer/sending_survey.html.erb
@@ -1,1 +1,22 @@
-<h1> blabakbaabl POUKI </h1>
+<section>
+	<span>
+		<br>
+		<br>
+	</span>
+		<div class="card" style="width: 50%;margin-left: auto;margin-right: auto;">
+			
+				<div class="card-body">
+					<h1 style="color: #ffffff;background-color: #172b4d;width: 100%;text-align: center; ">You just received an invitation to answer a survey </h1>
+						<p class="card-text">Dear Sir, Madam <br> Your opinion regarding your recent use of our services is important to improve the quality of the services offered to you. This is why we suggest that you answer a survey that will only take you 5 minutes.. <br><br>To access the survey, click here !</p>
+							<div class="card" style="width: 25%; margin-left: auto; margin-right: auto;">
+								
+								<%= link_to "Take the survey" landing_path(@landing), class:'btn btn-success mt-4'%>
+
+							</div>
+							<br>
+							<div class="card-footer">
+								<p style="text-align: center;">Create by (nom du createur)</p>
+							</div>
+				</div>
+		</div>
+</section>
