answer button on survey show deleted

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -35,8 +35,7 @@
                   <div class="form-group mb-3">
                     <div class="input-group input-group-alternative">                     
                       <input class="form-control" placeholder="<%= q.content %>" disabled>
-                    </div>
-                      <%= link_to 'Answer qestion', new_answer_path(q)  %>
+                    </div><br>
                   <% end %>
                   </div>
                 </form>
