--- a/app/views/list_mailer/sending_survey.html.erb
+++ b/app/views/list_mailer/sending_survey.html.erb
@@ -10,7 +10,7 @@
 						<p class="card-text">Dear Sir, Madam <br> Your opinion regarding your recent use of our services is important to improve the quality of the services offered to you. This is why we suggest that you answer a survey that will only take you 5 minutes.. <br><br>To access the survey, click here !</p>
 							<div class="card" style="width: 25%; margin-left: auto; margin-right: auto;">
 								
-								<%= link_to "Take the survey" landing_path(@landing), class:'btn btn-success mt-4'%>
+								<%= link_to 'Take the survey', 'http://localhost:3000/landings/#{@list.landing_id}', class:'btn btn-success mt-4'%>
 
 							</div>
 							<br>
