--- a/app/views/surveys/_question_fields.html.erb
+++ b/app/views/surveys/_question_fields.html.erb
@@ -1,5 +1,12 @@
-<tr class="nested-fields">
-  <td><%= link_to_remove_association "remove", f, class: 'btn btn-warning btn-sm' %> </td>
-  <td><%= f.input :content, label: false %></td>
-   <td><%= f.hidden_field :answered, value: 0 %> </td>
-</tr>
+<div class="nested-fields ">
+	<div class="row">
+		<div class="col-4">
+	  <%= link_to_remove_association "remove", f, class: 'btn btn-warning btn-sm' %>
+		</div>
+		<div class="col-4">
+	  <%= f.input :content, label: false %>
+	  <%= f.hidden_field :answered, value: 0 %>
+	  <br>
+	</div>
+	</div>
+</div>
