--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Survey</h1>
+<section class="py-5 bg-secondary" style="min-height: 84%">
+<h1 class="text-center">New Survey</h1>
 
 <%= render 'form', survey: @survey %>
-
-<%= link_to 'Back', surveys_path %>
+</section>
