--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -2,31 +2,11 @@
 <br>
 <h4>You have <%= @user.surveys.count %> surveys created</h4>
 <br>
-<% @user.surveys.each do |user_s| %>
-	<strong>Survey : </strong><%= user_s.title %><br>
-  <% average = [] %>
-  <% user_s.questions.each do |q| %>
-    <strong>Question :</strong><%= q.content %><br>
-    <strong>- Answers :</strong><% q.answers.each do |qa| %>
-                  <%= qa.value%> / 
-                  <% average << qa.value %>
-                <% end %><br>
-  <% end %>
-  <% result = average.sum / average.size.to_f %>
-  <strong>The average for this survey is </strong><%= result %> /4 <br><br>
-<% end %>
-<br>
-<br>
-
-<strong>Your company : </strong><%= @user.username %><br>
-<strong>Your email adress :</strong><%= @user.email %><br>
-<strong>You created </strong><%= @user.surveys.count %><strong> surveys</strong><br>
-<%= link_to "Edit your profile", edit_user_registration_path %><br><br>
 
 <!-- test dashboard -->
 
 <% @user.surveys.each do |user_s| %>
-<div class="nav-wrapper">
+<div class="nav-wrapper" style="max-width:80%">
     <ul class="nav nav-pills nav-fill flex-column flex-md-row" id="tabs-icons-text" role="tablist">
         <li class="nav-item">
             <a class="nav-link mb-sm-3 mb-md-0 active" id="tabs-icons-text-1-tab" data-toggle="tab" href="#tabs-icons-text-1" role="tab" aria-controls="tabs-icons-text-1" aria-selected="true"><i class="ni ni-cloud-upload-96 mr-2"></i>Home</a>
@@ -39,19 +19,32 @@
         </li>
     </ul>
 </div>
-<div class="card shadow">
+<div class="card shadow" style="max-width:80%">
     <div class="card-body">
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="tabs-icons-text-1" role="tabpanel" aria-labelledby="tabs-icons-text-1-tab">
-                <p class="description">Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth.</p>
-                <p class="description">Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse.</p>
+                <p class="description"> 
+<strong>Survey : </strong><%= user_s.title %><br>
+                    <% average = [] %> </p>
             </div>
             <div class="tab-pane fade" id="tabs-icons-text-2" role="tabpanel" aria-labelledby="tabs-icons-text-2-tab">
-                <p class="description">Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                <p class="description">   
+                    <% user_s.questions.each do |q| %>
+                    <strong>Question :</strong><%= q.content %><br>
+                    <strong>- Answers :</strong><% q.answers.each do |qa| %>
+                        <%= qa.value%> / 
+                        <% average << qa.value %>
+                        <% end %><br>
+                    <% end %>
             </div>
             <div class="tab-pane fade" id="tabs-icons-text-3" role="tabpanel" aria-labelledby="tabs-icons-text-3-tab">
-                <p class="description">Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth.</p>
+                <p class="description">
+                      <% result = average.sum / average.size.to_f %>
+                      <strong>The average for this survey is </strong><%= result %> /4 <br><br>
+
+                </p>
             </div>
         </div>
     </div>
 </div>
+<% end %>
