add padding for footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,19 +105,19 @@
 		<footer>
 			<div class="row align-items-center justify-content-md-between">
 				<div class="col-md-6">
-					<div class="copyright">
+					<div class="copyright" style="padding-left: 50px;">
 						<%= link_to "© 2019 Satisfact°, final project", root_path, class: "nav-link" %>
 					</div>
 				</div>
 					<div class="col-md-6">
 						<ul class="nav nav-footer justify-content-end">
 							<li class="nav-item">
-								<%= link_to "About Us", "/#the_team" , class: "nav-link" %>
+								<%= link_to "About us","/#the_team", class:'nav-link' %>
 							</li>
 							<li class="nav-item">
-								<%= link_to "Our services", "/#the_solution" , class: "nav-link" %>
+								<%= link_to "The solution","/#the_solution", class:'nav-link' %>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item" style="padding-right: 50px;">
 								<%= link_to "Contact_us", new_contact_path, class: "nav-link" %>
 							</li>
 						</ul>
