--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -46,7 +46,11 @@
                     <% average << a.value %>
                   <% end %>
                   <% result = average.sum / average.size.to_f %>
-                  <%= result %> /4
+                  <% if average.size > 0 %>
+                    <%= result %> / 4
+                  <% else %>
+                    <p>Not answer yet</p>
+                  <% end %>
                  </div>
                 <div class="row justify-content-around mt-3">
 		              <div class="col-3">
