add redirect after send answers

--- a/app/views/landings/show.html.erb
+++ b/app/views/landings/show.html.erb
@@ -32,7 +32,7 @@
                 <% i += 1 %>
               <% end %>
             <div class="text-center">
-              <%= link_to 'Send my answers', landing_path(@landing), class: "btn btn-success" %><br>
+              <%= link_to 'Send my answers', root_path, class: "btn btn-success" %><br>
             </div>
             <br>
           </div>
