--- a/app/views/static/index_home.html.erb
+++ b/app/views/static/index_home.html.erb
@@ -38,10 +38,10 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="img-fluid" src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80">
+                        <%= image_tag "https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80", class: "img-fluid" %>
                       </div>
                       <div class="carousel-item">
-                        <img class="img-fluid" src="https://images.unsplash.com/photo-1427751840561-9852520f8ce8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1955&q=80" alt="Second slide">
+                        <%= image_tag "https://images.unsplash.com/photo-1427751840561-9852520f8ce8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1955&q=80", class: "img-fluid" %>
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carousel_example" role="button" data-slide="prev">
@@ -76,7 +76,7 @@
   <div class="container">
     <div class="row row-grid align-items-center">
       <div class="col-md-6 order-md-2">
-        <img src="https://demos.creative-tim.com/argon-design-system/assets/img/theme/promo-1.png" class="img-fluid floating">
+        <%= image_tag "https://demos.creative-tim.com/argon-design-system/assets/img/theme/promo-1.png", class: "img-fluid floating" %>
       </div>
       <div class="col-md-6 order-md-1">
         <div class="pr-md-5">
@@ -149,7 +149,7 @@
     <div class="row row-grid align-items-center">
       <div class="col-md-6 order-lg-2 ml-lg-auto">
         <div class="position-relative pl-md-5">
-          <img src="https://demos.creative-tim.com/argon-design-system/assets/img/ill/ill-2.svg" class="img-center img-fluid">
+          <%= image_tag "https://demos.creative-tim.com/argon-design-system/assets/img/ill/ill-2.svg", class: "img-center img-fluid" %>
         </div>
       </div>
       <div class="col-lg-6 order-lg-1">
@@ -223,7 +223,7 @@
       <div class="col-md-6 col-lg-1 mb-5 mb-lg-0"></div>
       <div class="col-md-6 col-lg-2 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNU6XT54L-655b5ead2e85-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 150px;">
+          <%= image_tag "https://ca.slack-edge.com/T3W8B88JW-UNU6XT54L-655b5ead2e85-512", class: "rounded-circle img-center img-fluid shadow shadow-lg--hover"%>
           <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Sacha Tordjman</span>
@@ -239,7 +239,7 @@
 
       <div class="col-md-6 col-lg-2 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNULNA2PP-64e10b10ab5b-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 150px;">
+          <%= image_tag "https://ca.slack-edge.com/T3W8B88JW-UNULNA2PP-64e10b10ab5b-512", class: "rounded-circle img-center img-fluid shadow shadow-lg--hover"%>
           <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Tanguy Billon</span>
@@ -255,7 +255,7 @@
 
       <div class="col-md-6 col-lg-2 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNN877SSD-ab750300fff8-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 150px;">
+          <%= image_tag "https://ca.slack-edge.com/T3W8B88JW-UNN877SSD-ab750300fff8-512", class: "rounded-circle img-center img-fluid shadow shadow-lg--hover"%>
           <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Julien Ribeaucourt</span>
@@ -272,7 +272,7 @@
 
       <div class="col-md-6 col-lg-2 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNN87EX5X-acf9c0d8e3da-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 150px;">
+          <%= image_tag "https://ca.slack-edge.com/T3W8B88JW-UNN87EX5X-acf9c0d8e3da-512", class: "rounded-circle img-center img-fluid shadow shadow-lg--hover"%>
           <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Augustin Bernard</span>
@@ -288,7 +288,7 @@
 
       <div class="col-md-6 col-lg-2 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNULNA5UM-fe6009f3bb78-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 150px;">
+          <%= image_tag "https://ca.slack-edge.com/T3W8B88JW-UNULNA5UM-fe6009f3bb78-512", class: "rounded-circle img-center img-fluid shadow shadow-lg--hover"%>
           <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Baptiste Geffroy</span>
@@ -335,34 +335,22 @@
           <h4 class="display-4 mb-5 mt-5">These companies use our solution</h4>
           <div class="row justify-content-center">
             <div class="col-lg-2 col-4">
-              <a href="https://www.creative-tim.com/product/argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Bootstrap 4 - Most popular front-end component library">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/bootstrap.jpg" class="img-fluid">
-              </a>
+              <%= image_tag "https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/bootstrap.jpg", class: "img-fluid"%>
             </div>
             <div class="col-lg-2 col-4">
-              <a href=" https://www.creative-tim.com/product/vue-argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Vue.js - The progressive javascript framework">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/vue.jpg" class="img-fluid">
-              </a>
+              <%= image_tag "https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/vue.jpg", class: "img-fluid"%>
             </div>
             <div class="col-lg-2 col-4">
-              <a href=" https://www.creative-tim.com/product/argon-design-system-angular" target="_blank" data-toggle="tooltip" data-original-title="Angular - One framework. Mobile &amp; desktop">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/angular.jpg" class="img-fluid">
-              </a>
+              <%= image_tag "https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/angular.jpg", class: "img-fluid"%>
             </div>
             <div class="col-lg-2 col-4">
-              <a href=" https://www.creative-tim.com/product/argon-design-system-react" target="_blank" data-toggle="tooltip" data-original-title="React - A JavaScript library for building user interfaces">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/react.jpg" class="img-fluid">
-              </a>
+              <%= image_tag "https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/react.jpg", class: "img-fluid"%>
             </div>
             <div class="col-lg-2 col-4">
-              <a href=" https://www.creative-tim.com/product/argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Sketch - Digital design toolkit">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/sketch.jpg" class="img-fluid">
-              </a>
+              <%= image_tag "https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/sketch.jpg", class: "img-fluid"%>
             </div>
             <div class="col-lg-2 col-4">
-              <a href=" https://www.creative-tim.com/product/argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Adobe Photoshop - Software for digital images manipulation">
-                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/ps.jpg" class="img-fluid">
-              </a>
+              <%= image_tag "https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/ps.jpg", class: "img-fluid"%>
             </div>
           </div>
         </div>
